fixed homepage layout on mobile

--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -51,13 +51,26 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: calc(100vh - 60px);
+        padding-top: 15vh;
     }
 
     .home-text {
         width: 87vw !important;
         top: 10vh;
     }
+    
+    .hero-text {
+        font-size: 2.5rem !important;
+    }
+
+    .hero-subtext {
+        font-size: 1.8rem !important;
+    }
+
+    .hero-small-text {
+        font-size: 1.2rem !important;
+    }
+
 
     .memoji {
         display: none;
